--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -9,7 +9,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="sjsu.com.booktrade.LandingPageActivity"
-    tools:showIn="@layout/activity_landing_page">
+    tools:context=".LandingPage"
+    tools:showIn="@layout/app_bar_landing_page">
+
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>
 
 </RelativeLayout>
