--- a/app/src/main/res/menu/landing_page.xml
+++ b/app/src/main/res/menu/landing_page.xml
@@ -5,7 +5,8 @@
         android:id="@+id/action_postAdd"
         android:orderInCategory="100"
         android:title="Post Ad"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        />
 
     <item
         android:id="@+id/action_logout"
