--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,19 +58,23 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
 
-        <item name="android:windowBackground">@color/accent</item>
+        <item name="android:windowBackground">@drawable/bg1</item>
         <!--<item name="android:actionBarItemBackground">@color/primary</item>-->
         <!--&lt;!&ndash;<item name="android:actionDropDownStyle">@color/primary</item>&ndash;&gt;-->
         <!--<item name="android:navigationBarColor">@color/primary</item>-->
 
 
-        <item name="colorControlNormal">@color/iron</item>
-        <item name="colorControlActivated">@color/white</item>
-        <item name="colorControlHighlight">@color/white</item>
-        <item name="android:textColorHint">@color/iron</item>
+        <item name="colorControlNormal">@color/black</item>
+        <item name="colorControlActivated">@color/black</item>
+        <item name="colorControlHighlight">@color/brown</item>
+        <item name="android:textColorHint">@color/black</item>
+        <item name="android:textColor">@color/black</item>
 
-        <item name="colorButtonNormal">@color/primary_darker</item>
-        <item name="android:colorButtonNormal">@color/primary_darker</item>
+        <item name="colorButtonNormal">@color/brown</item>
+        <item name="android:colorButtonNormal">@color/brown</item>
+        <item name="android:statusBarColor">@color/brown_darker</item>
+
+
     </style>
 
 </resources>
