--- a/app/src/main/res/layout/book_details.xml
+++ b/app/src/main/res/layout/book_details.xml
@@ -1,204 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:fitsSystemWindows="true">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp">
+        android:layout_gravity="center"
+        android:padding="@dimen/dmn_5dp"
+        android:orientation="vertical">
 
-        <ImageView android:src="@drawable/book"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginBottom="24dp"
-                   android:layout_gravity="center_horizontal" />
-
-        <!-- Email Label -->
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  android:id="@+id/book_name"
-                  android:inputType="text"
-                  android:text="Cracking the coding Interviasfasfasfasfasfasfasfasfasfew"
-                  android:layout_marginTop="8dp"
-                  android:layout_marginBottom="8dp"
-                  android:textSize="20dp"
-                  android:gravity="center"
-                  android:scrollHorizontally="true"
-                  android:ellipsize="end"
-                  android:maxLines="1"
-                  android:textStyle="bold"/>
-
-        <TableLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:stretchColumns="1">
-            <TableRow
-                android:id="@+id/table_author"
-                android:layout_width="fill_parent"
-                android:weightSum="8"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:textSize="20dp"
-                    android:text="Author:"
-                    android:layout_gravity="left"
-                    android:textStyle="bold"
-                    android:shadowRadius="2"
-                    android:shadowDx="1"
-                    android:shadowDy="1"
-                    />
-
-                <TextView android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:inputType="text"
-                          android:id="@+id/book_author1"
-                          android:text="Gayle"
-                          android:layout_weight="6"
-                          android:layout_gravity="center"
-                          android:textSize="20dp"
-                          android:minLines="1"
-                          android:maxLines="2"
-                          android:textStyle="bold"
-                          android:shadowRadius="2"
-                          android:shadowDx="1"
-                          android:shadowDy="1"/>
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/table_year"
-                android:layout_width="wrap_content"
-                android:weightSum="8"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/year"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:textSize="20dp"
-                    android:text="Year:"
-                    android:layout_gravity="left"
-                    android:textStyle="bold"
-                    android:shadowRadius="2"
-                    android:shadowDx="1"
-                    android:shadowDy="1"/>
-
-                <TextView android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:inputType="text"
-                          android:id="@+id/book_year"
-                          android:text="2015"
-                          android:layout_gravity="center"
-                          android:layout_weight="2"
-                          android:textSize="20dp"
-                          android:minLines="1"
-                          android:textStyle="bold"
-                          android:shadowRadius="2"
-                          android:shadowDx="1"
-                          android:shadowDy="1"/>
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/table_isbn"
-                android:layout_width="fill_parent"
-                android:weightSum="8"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/isbn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:textSize="20dp"
-                    android:text="ISBN:"
-                    android:layout_gravity="left"
-                    android:textStyle="bold"
-                    android:shadowRadius="2"
-                    android:shadowDx="1"
-                    android:shadowDy="1"
-                    />
-
-                <TextView android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:inputType="number"
-                          android:id="@+id/book_isbn"
-                          android:text="0123456789123"
-                          android:layout_weight="6"
-                          android:layout_gravity="center"
-                          android:textSize="20dp"
-                          android:minLines="1"
-                          android:maxLines="2"
-                          android:textStyle="bold"
-                          android:shadowRadius="2"
-                          android:shadowDx="1"
-                          android:shadowDy="1"/>
-
-            </TableRow>
-
-            <TableRow
-                android:id="@+id/row_credits"
-                android:layout_width="wrap_content"
-                android:weightSum="8"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/credits"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:textSize="20dp"
-                    android:text="Credits:"
-                    android:layout_gravity="left"
-                    android:textStyle="bold"
-                    android:shadowRadius="2"
-                    android:shadowDx="1"
-                    android:shadowDy="1"/>
-
-                <TextView android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:inputType="number"
-                          android:id="@+id/book_credits"
-                          android:text="2"
-                          android:layout_gravity="center"
-                          android:layout_weight="2"
-                          android:textSize="20dp"
-                          android:minLines="1"
-                          android:textStyle="bold"
-                          android:shadowRadius="2"
-                          android:shadowDx="1"
-                          android:shadowDy="1"/>
-
-            </TableRow>
-
-        </TableLayout>
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/book_buy"
-            android:layout_width="fill_parent"
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:padding="12dp"
-            android:textStyle="bold"
-            android:text="Buy"/>
+            android:background="@drawable/ic_menu_camera"
+            android:id="@+id/book_imageDetails"
+            android:layout_gravity="center"></ImageView>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/book_nameDetails"/>
+        //android:layout_toRightOf="@+id/book_image"
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:id="@+id/book_priceDetails"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:id="@+id/book_idDetails"
+            android:visibility="invisible"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:id="@+id/book_authorDetails"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:id="@+id/book_categoryDetails"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="hello"
+            android:id="@+id/book_editionDetails"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Hello"
+            android:id="@+id/book_pickUpShipDetails"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/book_userIdDetails"
+            android:visibility="invisible"/>
+
+        <Button
+            android:id="@+id/btn_buy"
+            style="?android:textAppearanceSmall"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="BUY"
+            android:textStyle="bold" />
     </LinearLayout>
-</ScrollView>
+
+</LinearLayout>
