--- a/app/src/main/res/layout/nav_header_landing_page.xml
+++ b/app/src/main/res/layout/nav_header_landing_page.xml
@@ -26,15 +26,12 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/et_first_name"
+        android:id="@+id/display_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/custom_title_fname" />
 
-    <TextView
-        android:id="@+id/et_last_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/custom_title_name" />
+        //android:text="Name"
+
 
 </LinearLayout>
