--- a/app/src/main/res/layout/book_details.xml
+++ b/app/src/main/res/layout/book_details.xml
@@ -1,74 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true">
+
+
+<LinearLayout
+    android:orientation="vertical" android:layout_gravity="center" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingTop="40dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp">
+
+
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_menu_camera"
+        android:layout_marginBottom="24dp"
+        android:id="@+id/book_imageDetails"
+        android:layout_gravity="center"></ImageView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:padding="@dimen/dmn_5dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_menu_camera"
-            android:id="@+id/book_imageDetails"
-            android:layout_gravity="center"></ImageView>
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name: "/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/book_nameDetails"/>
         //android:layout_toRightOf="@+id/book_image"
+            </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price: "/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="1"
             android:id="@+id/book_priceDetails"/>
-        <TextView
+            </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="1"
-            android:id="@+id/book_idDetails"
-            android:visibility="invisible"/>
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Author: "/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="1"
             android:id="@+id/book_authorDetails"/>
-        <TextView
+            </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Category: "/>
+
+            <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="1"
             android:id="@+id/book_categoryDetails"/>
-        <TextView
+            </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edition: "/>
+
+
+
+            <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="hello"
             android:id="@+id/book_editionDetails"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Available for: "/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Hello"
             android:id="@+id/book_pickUpShipDetails"/>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btn_buy"
+            style="?android:textAppearanceSmall"
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="BUY"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:id="@+id/btn_cancel"
+            style="?android:textAppearanceSmall"
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:text="CANCEL"
+            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/btn_buy"
+            android:layout_marginStart="45dp" />
+        </RelativeLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/book_userIdDetails"
             android:visibility="invisible"/>
 
-        <Button
-            android:id="@+id/btn_buy"
-            style="?android:textAppearanceSmall"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="BUY"
-            android:textStyle="bold" />
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="1"
+            android:id="@+id/book_idDetails"
+            android:visibility="invisible"/>
+
     </LinearLayout>
 
 </LinearLayout>
+ </ScrollView>
