--- a/app/src/main/res/layout/display_books.xml
+++ b/app/src/main/res/layout/display_books.xml
@@ -12,54 +12,92 @@
        android:layout_gravity="center"
         />
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="@dimen/dmn_5dp"
             android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name: "/>
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/book_name"/>
             //android:layout_toRightOf="@+id/book_image"
 
+                </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Price: "/>
+
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="1"
             android:id="@+id/book_price"/>
+                </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Author: "/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:id="@+id/book_author"/>
+                </LinearLayout>
+
+            <TextView
+             android:layout_width="2dp"
+             android:layout_height="2dp"
+             android:id="@+id/book_category"
+             android:visibility="invisible"/>
          <TextView
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:text="1"
-             android:id="@+id/book_category"/>
-         <TextView
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:text="1"
-             android:id="@+id/book_edition"/>
+             android:layout_width="2dp"
+             android:layout_height="2dp"
+             android:id="@+id/book_edition"
+             android:visibility="invisible"/>
           <TextView
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:text="1"
-             android:id="@+id/book_pickUpShip"/>
+              android:layout_width="2dp"
+              android:layout_height="2dp"
+              android:id="@+id/book_pickUpShip"
+              android:visibility="invisible"/>
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="1"
+            android:layout_width="2dp"
+            android:layout_height="2dp"
             android:id="@+id/book_id"
             android:visibility="invisible"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="1"
-            android:id="@+id/book_author"/>
+
          <TextView
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+             android:layout_width="2dp"
+             android:layout_height="2dp"
              android:id="@+id/book_userId"
              android:visibility="invisible"/>
+
     </LinearLayout>
 </LinearLayout>
