--- a/app/src/main/res/layout/list_view_books.xml
+++ b/app/src/main/res/layout/list_view_books.xml
@@ -1,58 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
-
-
-
-
-
-    <LinearLayout
+ <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:padding="@dimen/dmn_5dp">
-
-
-        <include
-            layout="@layout/app_bar_landing_page"
-            android:layout_width="match_parent"
-            android:layout_height="300dp" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:weightSum="1">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:id="@+id/mallik"
-            android:text=""/>
-        <include layout="@layout/content_landing_page"
+        <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"/>
+            android:id="@+id/display_booksList">
+        </ListView>
     </LinearLayout>
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_landing_page"
-        app:menu="@menu/activity_landing_page_drawer" />
-</android.support.v4.widget.DrawerLayout>
+
 
 
     <!--<?xml version="1.0" encoding="utf-8"?>-->
@@ -96,4 +63,10 @@
     <!--</android.support.v4.widget.DrawerLayout>-->
 
     <!--</android.support.design.widget.CoordinatorLayout>-->
+
+
+
+
+
+
 
