--- a/app/src/main/res/layout/book_details.xml
+++ b/app/src/main/res/layout/book_details.xml
@@ -14,6 +14,7 @@
 
         <ImageView android:src="@drawable/book"
                    android:layout_width="wrap_content"
+                   android:id="@+id/image_small"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="center_horizontal" />
