--- a/app/src/main/res/layout/display_books.xml
+++ b/app/src/main/res/layout/display_books.xml
@@ -5,15 +5,11 @@
 
 
    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-       android:background="@drawable/ic_menu_camera"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:id="@+id/book_image"
-       android:layout_gravity="center"
+        android:layout_gravity="center"
         />
-
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
