--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -469,7 +469,7 @@
 
             </TableLayout>
             <android.support.v7.widget.AppCompatButton
-                android:id="@+id/book_buy"
+                android:id="@+id/btn_buy"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
