--- a/app/src/main/res/menu/landing_page.xml
+++ b/app/src/main/res/menu/landing_page.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android2="http://schemas.android.com/tools">
+
     <item
         android:id="@+id/action_postAdd"
         android:orderInCategory="100"
@@ -13,4 +15,6 @@
         android:orderInCategory="100"
         android:title="Logout"
         app:showAsAction="never" />
+
+
 </menu>
