--- a/app/src/main/res/layout/list_view_books.xml
+++ b/app/src/main/res/layout/list_view_books.xml
@@ -12,6 +12,14 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:padding="@dimen/dmn_5dp">
+
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:id="@+id/filterText"
+        android:hint="Search.." />
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
