--- a/app/src/main/res/layout/nav_header_landing_page.xml
+++ b/app/src/main/res/layout/nav_header_landing_page.xml
@@ -14,22 +14,24 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:layout_gravity="center"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:src="@drawable/book_trade" />
 
     <TextView
+        android:id="@+id/display_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Android Studio"
+        android:text="@string/custom_title_fname"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/display_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/custom_title_fname" />
 
         //android:text="Name"
