Buy book layout change

--- a/app/src/main/res/layout/buybook.xml
+++ b/app/src/main/res/layout/buybook.xml
@@ -60,6 +60,7 @@
             android:layout_height="wrap_content"
             android:inputType="date"
             android:textSize="15dp"
+            android:hint="mm-dd-yyyy"
             android:gravity="center"
             android:layout_weight="1"
             />
