--- a/app/src/main/res/layout/postad2.xml
+++ b/app/src/main/res/layout/postad2.xml
@@ -22,8 +22,8 @@
         android:layout_marginBottom="18dp">
 
         <ImageView android:id="@+id/bookImage"
-            android:layout_width="wrap_content"
-            android:layout_height="125dp"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
             android:layout_marginRight="8dp"
             android:layout_gravity="left"
             android:layout_weight="1"/>
