--- a/app/src/main/res/menu/activity_landing_page_drawer.xml
+++ b/app/src/main/res/menu/activity_landing_page_drawer.xml
@@ -4,16 +4,16 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_gallery"
             android:title="Home" />
         <item
             android:id="@+id/nav_payment"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_send"
             android:title="Payment" />
-        <item
-            android:id="@+id/nav_history"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="History" />
+        <!--<item-->
+        <!--android:id="@+id/nav_history"-->
+        <!--android:icon="@drawable/ic_menu_slideshow"-->
+        <!--android:title="History" />-->
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_menu_manage"
@@ -21,10 +21,10 @@
     </group>
 
     <group>
-            <item
-                android:id="@+id/nav_setting"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Settings" />
+        <!--<item-->
+        <!--android:id="@+id/nav_setting"-->
+        <!--android:icon="@drawable/ic_menu_share"-->
+        <!--android:title="Settings" />-->
 
     </group>
 
