--- a/app/src/main/res/menu/activity_landing_page_drawer.xml
+++ b/app/src/main/res/menu/activity_landing_page_drawer.xml
@@ -10,10 +10,10 @@
             android:id="@+id/nav_payment"
             android:icon="@drawable/ic_menu_send"
             android:title="Payment" />
-        <!--<item-->
-        <!--android:id="@+id/nav_history"-->
-        <!--android:icon="@drawable/ic_menu_slideshow"-->
-        <!--android:title="History" />-->
+        <item
+            android:id="@+id/nav_history"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="History" />
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_menu_manage"
